# rusty_rebase

./: Cargo.toml  README.md  software_catalog.toml
src/: catalog.rs  distro.rs  installer.rs  main.rs  resolver.rs  restorer.rs
src/app/: actions.rs  mod.rs  state.rs  ui.rs
